# vkr

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
db/: schema.dbml  schema.sql
demo/: compare.html  index.html  runtime-cpp.html  runtime-go.html  runtime.html
gateway/: Dockerfile  go.mod  go.sum
gateway/cmd/server/: main.go
gateway/internal/auth/: token.go
gateway/internal/grpc/: client.go
gateway/internal/http/: handlers.go  pages.go
gateway/internal/metrics/: metrics.go
gateway/internal/storage/: postgres.go
gateway/proto/: streaming.pb.go  streaming_grpc.pb.go
monitoring/: prometheus.yml
monitoring/grafana/: GRAFANA_DASHBOARD_QUERIES.md
processor-cpp/: CMakeLists.txt  Dockerfile
processor-cpp/src/: main.cpp
processor-cpp/src/arena/: memory_arena.cpp  memory_arena.hpp
processor-cpp/src/processing/: image_processor.cpp  image_processor.hpp
processor-cpp/src/server/: grpc_server.cpp  grpc_server.hpp  metrics_server.cpp  metrics_server.hpp
processor-cpp/tests/: arena_benchmark.cpp  test_arena.cpp  test_processor.cpp
processor-go/: Dockerfile  go.mod  go.sum
processor-go/cmd/server/: main.go
processor-go/proto/: streaming.pb.go  streaming_grpc.pb.go
proto/: streaming.proto
scripts/: arena_vs_no_arena_experiment.sh  generate_proto.sh
tests/: go.mod
tests/benchmarks/: benchmark.go
tests/load/: load_test.go
